--- a/CursoJS/Aulas/ex004.html
+++ b/CursoJS/Aulas/ex004.html
@@ -17,8 +17,7 @@
     <script>
 
         var nome = prompt('Digite seu nome: ')
-        document.write(`Eai, ${nome} seu nome tem ${nome.length} letras.`)
-        
+        document.write(`Olá, ${nome} seu nome tem ${nome.length} letras.`)
 
     </script>
 </body>
