:up:atualização calculadora

--- a/CursoJS/Aulas/ex007.html
+++ b/CursoJS/Aulas/ex007.html
@@ -9,9 +9,13 @@
         body{
             font: normal 18pt Arial;
         }
+        h1{
+            background-color: aqua;
+            border-radius: 5px;
+        }
         input{
             font: normal 16pt Arial;
-            width: 150px;
+            width: 120px;
         }
         div#res{
             margin-top: 20px;
