:up:inserindo imagem no projeto 03

--- a/CursoJS/Exercicios/Projeto03/index.html
+++ b/CursoJS/Exercicios/Projeto03/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Vamos contar...</h1>
+        <img src="./img/contagem.jpg" alt="contagem">
     </header>
 
     <section>
