--- a/CursoJS/Exercicios/Projeto05/index.html
+++ b/CursoJS/Exercicios/Projeto05/index.html
@@ -18,7 +18,7 @@
             <input type="number" name="f-num" id="f-num">
             <input type="button" value="Adicionar" onclick="adicionar()">
             <br><br><select name="f-lista" id="f-lista" size="6"></select>
-            <br><input type="button" value="Finalizar">
+            <br><input type="button" value="Finalizar" onclick="finalizar()">
         </div>
 
         <div id="resultado">
