--- a/Curso HTML5 e CSS3/Modulo 1/aulaImagens/index04.html
+++ b/Curso HTML5 e CSS3/Modulo 1/aulaImagens/index04.html
@@ -7,7 +7,7 @@
             <title>Imagens e Favicon</title>
       </head>
       <body>
-            <h2>Site baixar imagens</h2>
+            <h1>Site baixar imagens</h1>
             <ul>
                   <li>
                         <a href="http://unsplash.com">Unsplash (site em inglês)</a>
@@ -22,5 +22,17 @@
                         <a href="http://commons.wikimedia.org">Wikimedia Commons</a>
                   </li>
             </ul>
+
+            <h2>Carregamento de Imagem</h2>
+                  <p>Imagens carregadas em mesma pasta</p>
+                        <img src="logo-html.png" alt="logo-html">
+                        <img src="logo-css.png" alt="logo-css">
+
+                  <p>Imagem carregada em sub-pasta</p>
+                        <img src="img/work-tabel-200.jpg" alt="img-work-tabel">
+
+                  <p>Imagem carregada por link</p>
+                        <img src="https://www.mumbai-freelancer.com/assets/img/Platforms/js.png" alt="logo-javascript">
+            
       </body>
 </html>
