:up:update index.html

--- a/Curso HTML5 e CSS3/Modulo 1/desafios/d05/desafio05.html
+++ b/Curso HTML5 e CSS3/Modulo 1/desafios/d05/desafio05.html
@@ -25,7 +25,7 @@
                         <a href="http://www.github.com/juniormelo-dev" target="_blank">/juniormelo-dev</a> Acessa lá meu repositório público no GitHub
                   <li>
                         <i class="fa-brands fa-linkedin"></i>
-                        <a href="http://www.linkedin.com/juniormelo01" target="_blank">/juniormelo01</a> - Me adiciona lá no Linkedin
+                        <a href="http://www.linkedin.com/in/juniormelo01" target="_blank">/juniormelo01</a> - Me adiciona lá no Linkedin
                   </li>
                   <li>
                         <i class="fa-brands fa-square-facebook"></i>
