--- a/CursoemVideo-Projeto-Google-Glass/fotos.html
+++ b/CursoemVideo-Projeto-Google-Glass/fotos.html
@@ -40,7 +40,7 @@
 				</hgroup>
 			</header>	
 		
-	<p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
+	<p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição detalhada.</p>
 
 	<ul id="album-fotos">
 		<li id="foto01"><span>Agenda e lembretes</span></li>
