Add aula links de downloads

--- a/CursoHTML5eCSS3/Modulo 1/Aulas/aulaLinks/index10.html
+++ b/CursoHTML5eCSS3/Modulo 1/Aulas/aulaLinks/index10.html
@@ -17,5 +17,12 @@
       <p>Criando link interno para mesmo nível de pasta. <a href="pagina01.html" rel="next">Acesse Pag01</a></p>
       
       <p>Criando link interno para pasta em outro nível. <a href="./nivelAcima/pagina03.html" rel="next">Acesse Pag03</a></p>
+
+      <h1>Links Downloads</h1>
+            <ul>
+                  <li><a href="aulaDownloads/10 - Ligações em toda parte.pdf" download="10 - Ligações em toda parte.pdf" type="aplication/pdf">Baixar arquivo PDF</a></li>
+                  <li><a href="aulaDownloads/10 - Ligações em toda parte.zip" download="10 - Ligações em toda parte.zip">Baixar arquivo ZIP</a></li>
+            </ul>
+
 </body>
 </html>
