--- a/CursoHTML5eCSS3/Modulo 1/Aulas/imgAudioVideo/index11.html
+++ b/CursoHTML5eCSS3/Modulo 1/Aulas/imgAudioVideo/index11.html
@@ -18,10 +18,9 @@
 
       <h1>Áudio no site</h1>
       <p>O atributo preload indica se o áudio será pré-carregado ou não e aceita três valores: <br>
-      metadata =  vai carregar apenas as informações sobre o arquivo (tamanho, tempo, informações de direitos, etc) <br>
-      none =  não vai carregar absolutamente nada até que o usuário clique no botão. <br>
-      play ou um script inicie a reprodução. <br>
-      auto (padrão) vai carregar o arquivo de áudio inteiro assim que a página for carregada, mesmo que o usuário nunca aperte o play. <br>
+      &nbsp;&nbsp;metadata =  vai carregar apenas as informações sobre o arquivo (tamanho, tempo, informações de direitos, etc) <br>
+      &nbsp;&nbsp;none =  não vai carregar absolutamente nada até que o usuário clique no botão play ou um script inicie a reprodução. <br>
+      &nbsp;&nbsp;auto (padrão) vai carregar o arquivo de áudio inteiro assim que a página for carregada, mesmo que o usuário nunca aperte o play. <br>
       O atributo controls vai apresentar o player na tela. Caso não seja colocado na tag &lt;audio&gt;, o controle será transparente e o usuário não poderá interagir com ele. <br>
       O atributo autoplay, quando inserido, vai iniciar a reprodução do áudio assim que a página for carregada. <br>
       O atributo loop vai fazer com que o áudio seja repetido eternamente assim que terminar a sua reprodução.</p>
@@ -30,6 +29,6 @@
             <source src="Look Both Ways - Nathan Moore.mp3" type="audio/mpeg">
             <p>Suporte  a outros navegadores <a href="Look Both Ways - Nathan Moore.mp3" download="Look Both Ways - Nathan Moore.mp3" type="audio/mpeg"></a></p>
       </audio>
-      <p>Usualmente também usa-se os tipo de arquivo .ogg e .wav</p>
+      <p>Normalmente além do formato .mp3, também usa-se os tipo de arquivo .ogg e .wav</p>
 </body>
 </html>
