:package:Add aula sobre videos e consumo de dados

--- a/CursoHTML5eCSS3/Modulo 1/Aulas/imgAudioVideo/index11.html
+++ b/CursoHTML5eCSS3/Modulo 1/Aulas/imgAudioVideo/index11.html
@@ -30,5 +30,8 @@
             <p>Suporte  a outros navegadores <a href="Look Both Ways - Nathan Moore.mp3" download="Look Both Ways - Nathan Moore.mp3" type="audio/mpeg"></a></p>
       </audio>
       <p>Normalmente além do formato .mp3, também usa-se os tipo de arquivo .ogg e .wav</p>
+
+      <h1>Vídeo no site (hospedagem local)</h1>
+      <video width="600px" height="400px" src="media/inserindo-videos.mp4" type="video/mp4" controls autoplay loop></video>
 </body>
 </html>
