:up:Mais tipos de hospedagem de vídeos

--- a/CursoHTML5eCSS3/Modulo 1/Aulas/imgAudioVideo/index11.html
+++ b/CursoHTML5eCSS3/Modulo 1/Aulas/imgAudioVideo/index11.html
@@ -32,6 +32,13 @@
       <p>Normalmente além do formato .mp3, também usa-se os tipo de arquivo .ogg e .wav</p>
 
       <h1>Vídeo no site (hospedagem local)</h1>
-      <video width="600px" height="400px" src="media/inserindo-videos.mp4" type="video/mp4" controls autoplay loop></video>
+      <video width="600px" height="400px" src="media/inserindo-videos.mp4" type="video/mp4" controls></video>
+
+      <h1>Vídeo no site (hospedagem externa com visualização público - Youtube)</h1>
+      <iframe width="600" height="400" src="https://www.youtube.com/embed/WZYi3SS8cgw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+      <h1>Vídeo no site (hospedagem externa com visualização público/privado - Vimeo)</h1>
+      <iframe src="https://player.vimeo.com/video/17689955?h=2b43cf5138&loop=1&portrait=0" width="600" height="338" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      
 </body>
 </html>
