--- a/CursoHTML5eCSS3/Modulo 1/Aulas/aulaCss/index.html
+++ b/CursoHTML5eCSS3/Modulo 1/Aulas/aulaCss/index.html
@@ -6,9 +6,20 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="shortcut icon" href="/Modulo 1/favicon.ico" type="image/x-icon">
       <title>Aprendendo CSS inline</title>
+      <style>
+            body {
+                  font-family: Arial, Helvetica, sans-serif;
+                  background-color: lightcyan;
+                  color: blue;
+            }
+
+            h1 {
+                  color: green;
+            }
+      </style>
 </head>
-<body style="font-family: Arial, Helvetica, sans-serif; color: blue;">
-      <h1 style="color: red;">Capítulo 1</h1>
+<body>
+      <h1>Capítulo 1</h1style=>
       <h2>Capítulo 1.1</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro illum consequuntur impedit omnis ut voluptate quasi? Dolorem dolor natus numquam.</p>
       <h2>Capítulo 1.2</h2>
