:up:Update nos arquivos, criando link pagina02 e testando CSS Externo

--- a/CursoHTML5eCSS3/Modulo 1/Aulas/aulaCss/index.html
+++ b/CursoHTML5eCSS3/Modulo 1/Aulas/aulaCss/index.html
@@ -9,13 +9,17 @@
       <link rel="stylesheet" href="style.css">
 </head>
 <body>
-      <h1>Capítulo 1</h1style=>
-      <h2>Capítulo 1.1</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro illum consequuntur impedit omnis ut voluptate quasi? Dolorem dolor natus numquam.</p>
-      <h2>Capítulo 1.2</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus error nam consequuntur voluptatem vero molestias minima, quo ducimus perferendis provident.</p>
+      <h1>Página 01</h1>
+      <h1>Capítulo 1</h1>
+            <h2>Capítulo 1.1</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro illum consequuntur impedit omnis ut voluptate quasi? Dolorem dolor natus numquam.</p>
+            <h2>Capítulo 1.2</h2>
+                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus error nam consequuntur voluptatem vero molestias minima, quo ducimus perferendis provident.</p>
       <h1>Capítulo 2</h1>
-      <h2>Capítulo 2.1</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor explicabo reprehenderit nemo rerum nobis officiis amet, quia dolorum voluptatum eum.</p>
+            <h2>Capítulo 2.1</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor explicabo reprehenderit nemo rerum nobis officiis amet, quia dolorum voluptatum eum.</p>
+
+      <h1>Página 02</h1>
+      <p><a href="index02.html" >Ir para Página 02</a></p>
 </body>
 </html>
